# nwu-protocol

./: .conventional-commits.json  .env.agent.example  .env.example  .env.local  .env.production.example  .eslintrc.json  .gitignore  .vercelignore  AGENT_ARCHITECTURE_DIAGRAM.txt  AGENT_ORCHESTRATION.md  AGENT_QUICKSTART.md  AI_AGENT_STANDARDS.md  API_GUIDE.md  API_REFERENCE.md  ARCHITECTURE.md  AUTOMATION.md  AUTOMATION_GUIDE.md  AUTOMATION_QUICKREF.md  AUTOMATION_SUMMARY.md  BACKEND_VERIFICATION.md  BUILD_STANDARDS.md  BUSINESS_AGENT_GUIDE.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CODING_STANDARDS.md  CONTRIBUTING.md  DEFINITION_OF_DONE.md  DEPLOYMENT.md  DEPLOYMENT_CHECKLIST.md  DEPLOYMENT_COMPARISON.md  DEPLOYMENT_INDEX.md  DEPLOYMENT_READY.md  DEPLOYMENT_STATUS.md  DEPLOY_NOW.md  DEVELOPER_GUIDE.md  DEVELOPMENT_COMPLETE.md  DEVLOG.md  Dockerfile.agent  Dockerfile.backend  (+88 more)
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  labeler.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/agents/: my-agent.agent.md
.github/workflows/: auto-complete-repair.yml  auto-deploy-all-systems.yml  auto-merge-copilot.yml  auto-merge.yml  auto-pr.yml  auto-start-ci.yml  autofix-deploy.yml  ci-cd.yml  ci.yml  codeql.yml  codex-autofix.yml  continuous-healing.yml  defender-for-devops.yml  deploy.yml  failover-deployment.yml  fastapi-check.yml  notify-automaton.yml  pr-automation.yml  prestige-build.yml  production-deployment.yml  project-init.yml  quality-checks.yml  quarterly-audit.yml  release.yml  secrets-deploy.yml  stale-pr-management.yml  standards-enforcement.yml  stripe-setup.yml  (+1 more)
agent-alpha/: requirements.txt
agent-business-lead/: README.md  requirements.txt
audits/: Q1-2026.md  Q2-2026.md  README.md
automation/: README.md  deploy-turnkey-automation.sh
backend/: alembic.ini  coverage.xml  requirements.txt
contracts/: .env.example  NWUDataToken.sol  NWUGovernance.sol  NWUProtocol.sol  hardhat.config.js  package-lock.json  package.json
docs/: AUTOMATED_RELEASE_NOTES.md
examples/: README.md  agent_orchestration_demo.py  api_usage.py
frontend/: .env.local.example  .eslintrc.json  .gitignore  README.md  package-lock.json  package.json  vercel.json
k8s/: cert-manager-clusterissuer.yaml  ingress.yaml
manifests/: nwu-protocol.secrets.json
nwu_protocol/: __init__.py
scripts/: auto-repair.sh  config-wizard.sh  generate-release-notes.js  migrate_halt_process.py  pr-merger.sh  pre-commit-hook.sh  push-to-github.sh  push-to-railway.sh  release-notes-helper.sh  rotate-secrets.sh  secretops.py  service-registry.sh  setup-automation.sh  setup-secrets.sh  setup-ssm-secrets.sh  setup-stripe-products.js  setup_stripe.py  test-runner.sh  validate-halt-process.sh  validate-secrets.sh
src/: App.tsx  app.py  index.css  index.py
tests/: __init__.py  test_agent_orchestrator.py  test_agent_runtime.py  test_api.py  test_auto_repair.py  test_contribution_manager.py  test_reward_calculator.py  test_user_manager.py  test_verification_engine.py
(+153 files in other folders)
