[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwu-protocol"
version = "1.0.0"
description = "Enterprise Unified Network Protocol with self-healing capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Garrett Carrol", email = "70427860+Garrettc123@users.noreply.github.com"}
]
keywords = ["protocol", "network", "enterprise", "ai", "self-healing"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Enterprise",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
]

[project.urls]
Repository = "https://github.com/Garrettc123/nwu-protocol"
Documentation = "https://github.com/Garrettc123/nwu-protocol/wiki"
"Bug Tracker" = "https://github.com/Garrettc123/nwu-protocol/issues"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]
api = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0",
]
data = [
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "pymongo>=4.5",
]

[project.scripts]
app = "app:app"

[tool.setuptools]
packages = ["nwu_protocol"]

[tool.black]
line-length = 100
target-version = ['py310', 'py311', 'py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 100
skip_gitignore = true

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py", "*_test.py"]
addopts = "-v --cov=. --cov-report=term-missing --cov-report=html"
