[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nwu-protocol"
version = "1.0.0"
description = "Enterprise Unified Network Protocol with self-healing capabilities"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [
    {name = "Garrett Carrol", email = "70427860+Garrettc123@users.noreply.github.com"}
]
keywords = ["protocol", "network", "enterprise", "ai", "self-healing"]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "httpx>=0.25.0",
    "python-dotenv>=1.0.0",
    "requests>=2.31.0"
]

[project.urls]
Repository = "https://github.com/Garrettc123/nwu-protocol"

[tool.setuptools.packages.find]
where = ["."]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
asyncio_mode = "strict"
